--- a/src/components/City/CityDetails.scss
+++ b/src/components/City/CityDetails.scss
@@ -1,33 +1,82 @@
 @import '../../styles/colors.scss';
 @import '../../styles/mixins.scss';
+@import '../../styles/variables.scss';
 
 .CityDetails {
   background-color: rgba($dark-blue, .2);
   display: flex;
-  margin: 2rem;
+  margin: 5rem 2rem;
   padding: 2rem 0;
+  position: relative;
 
   @include mobile {
     align-items: center;
     flex-direction: column;
+    margin: 2rem;
+    overflow: hidden;
+    padding-top: 0;
   }
 
   &__body {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: flex-start;
+    text-align: left;
 
     @include mobile {
       flex-direction: column;
     }
   }
 
-  &__image {
-    padding: 0 2rem;
-    width: 30%;
+  &__main-info {
+    font-size: 1.5rem;
+    flex: 1;
+    font-weight: 600;
+    margin-right: 1rem;
+    padding-right: 1rem;
+
+    small {
+      font-size: 1rem;
+    }
+  }
+
+  &__icon-wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  &__extra-info {
+    flex: 3;
+    font-size: 1.2rem;
+    justify-content: space-between;
 
     @include mobile {
-      width: unset;
+      font-size: .8rem;
+      padding: 0;
+    }
+
+    small {
+      font-weight: 600;
+      color: $dark-blue;
+      padding-right: .3rem;
+
+      @include mobile {
+        font-size: .7rem;
+      }
+    }
+
+    p {
+      margin-right: .5rem;
+    }
+  }
+
+  &__image {
+    width: 30%;
+    min-height: 20rem;
+
+    @include mobile {
+      width: 100%;
+      height: 15rem;
     }
 
     img {
@@ -46,12 +95,21 @@
     @include mobile {
       border: none;
       margin-top: 1rem;
-      text-align: center;
+      text-align: left;
+      width: 80%;
     }
   }
 
   &__title {
+    font-family: $secondary-font;
     font-size: 1.5rem;
     font-weight: 800;
+    letter-spacing: .2rem;
+  }
+
+  .UnitsToggle {
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 }
