Refactor resources and variable names

--- a/src/components/City/CityDetails.scss
+++ b/src/components/City/CityDetails.scss
@@ -1,6 +1,6 @@
 @import '../../styles/colors.scss';
 @import '../../styles/mixins.scss';
-@import '../../styles/variables.scss';
+@import '../../styles/fonts.scss';
 
 .CityDetails {
   background-color: rgba($dark-blue, .2);
