--- a/src/components/City/CityList.scss
+++ b/src/components/City/CityList.scss
@@ -1,6 +1,6 @@
 @import '../../styles/colors.scss';
 @import '../../styles/mixins.scss';
-@import '../../styles/variables.scss';
+@import '../../styles/fonts.scss';
 
 .CityList {
   margin-top: 1rem;
