--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables.scss';
+@import '../../styles/fonts.scss';
 @import '../../styles/colors.scss';
 @import '../../styles/mixins.scss';
 
